name:                subhask
version:             0.2.0.0
synopsis:            Type safe interface for programming in subcategories of Hask
homepage:            http://github.com/mikeizbicki/subhask
license:             BSD3
license-file:        LICENSE
author:              Mike Izbicki
maintainer:          mike@izbicki.me
category:            Control, Categories, Algebra
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:
    SubHask is a radical rewrite of the Haskell <https://www.haskell.org/onlinereport/standard-prelude.htm Prelude>.
    The goal is to make numerical computing in Haskell fun and fast.
    The main idea is to use a type safe interface for programming in arbitrary subcategories of <https://wiki.haskell.org/Hask Hask>.
    For example, the category <http://ncatlab.org/nlab/show/Vect Vect> of linear functions is a subcategory of Hask, and SubHask exploits this fact to give a nice interface for linear algebra.
    To achieve this goal, almost every class hierarchy is redefined to be more general.

    I recommend reading the <http://github.com/mikeizbicki/subhask/blob/master/README.md README> file and the <http://github.com/mikeizbicki/subhask/blob/master/examples examples> before looking at the documentation here.

source-repository head
    type: git
    location: http://github.com/mikeizbicki/subhask

--------------------------------------------------------------------------------

Flag LlvmSupport
      Description: whether to -fllvm
      Default: True
      -- needed to be turned off in travis.
      -- see https://github.com/travis-ci/travis-ci/issues/6120

Flag DoTestOptimise
      Description: whether to -O2 test
      Default: False
      -- full optimised compilation takes a bit, and is turned off by default for the test suite.
      -- Note: still on for the bench suite, where it doesn't take long.

library
    exposed-modules:
        SubHask

        SubHask.Algebra
        SubHask.Algebra.Array
        SubHask.Algebra.Container
        SubHask.Algebra.Group
        SubHask.Algebra.Logic
        SubHask.Algebra.Matrix
        SubHask.Algebra.Metric
        SubHask.Algebra.Ord
        SubHask.Algebra.Parallel
        SubHask.Algebra.Ring
        SubHask.Algebra.Vector
        SubHask.Algebra.Vector.FFI
        SubHask.Algebra.Vector.RMStreams

        SubHask.Category
        SubHask.Category.Finite
        SubHask.Category.Product
        SubHask.Category.Polynomial
        SubHask.Category.Slice
        SubHask.Category.Trans.Bijective
        SubHask.Category.Trans.Constrained
        SubHask.Category.Trans.Derivative
        SubHask.Category.Trans.Monotonic

        SubHask.Compatibility.Base
--         SubHask.Compatibility.BloomFilter
        SubHask.Compatibility.ByteString
        SubHask.Compatibility.Cassava
        SubHask.Compatibility.Containers
--         SubHask.Compatibility.HyperLogLog

        SubHask.Monad
        SubHask.Mutable
        SubHask.SubType

        SubHask.TemplateHaskell.Base
        SubHask.TemplateHaskell.Deriving
        SubHask.TemplateHaskell.Mutable
        SubHask.TemplateHaskell.Test

    other-modules:
        SubHask.Internal.Prelude
        SubHask.TemplateHaskell.Common

    default-extensions:
        TypeFamilies,
        ConstraintKinds,
        DataKinds,
        GADTs,
        MultiParamTypeClasses,
        FlexibleInstances,
        FlexibleContexts,
        TypeOperators,
        RankNTypes,
        InstanceSigs,
        ScopedTypeVariables,
        UndecidableInstances,
        PolyKinds,
        StandaloneDeriving,
        GeneralizedNewtypeDeriving,
        TemplateHaskell,
        BangPatterns,
        FunctionalDependencies,
        TupleSections,
        MultiWayIf,
        AutoDeriveTypeable,
        DeriveGeneric,
        RebindableSyntax,
        DefaultSignatures,

        UndecidableSuperClasses

    hs-source-dirs:
        src

    c-sources:
        cbits/Lebesgue.c

    cc-options:
        -ffast-math
        -msse3

    ghc-options:
        -funbox-strict-fields
        -fenable-rewrite-rules
        -Wall
        -Wno-simplifiable-class-constraints

        -- FIXME:
        -- SubHask often uses redundant constraints to maintain invariants.
        -- GHC 8.0 does not yet let us specify at fine granularity which constraints are intentionally meant to be redundant.
        -- So this warning must be temporarily disabled.
        -- See: https://ghc.haskell.org/trac/ghc/ticket/10635
        -Wno-redundant-constraints

        -- FIXME:
        -- The template haskell code in the homoiconic library generates lots of spurious warnings.
        -Wno-unused-matches

    build-depends:
        -- haskell language
        base >= 4.9 && <4.10,
        ghc-prim,
        template-haskell,

        -- special functionality
        homoiconic,
        parallel,
        deepseq,
        primitive,
        monad-primitive,
        QuickCheck,

        -- math
        erf,
        gamma,
        hmatrix,

        -- compatibility control flow
        mtl,
        MonadRandom,

        -- compatibility data structures
        bytestring,
--         bloomfilter,
        cassava,
        containers,
        vector,
        array,
        reflection

        -- required for hyperloglog compatibility
--         hyperloglog,
--         semigroups,
--         bytes,
--         approximate,
--         lens

    default-language:
        Haskell2010

--------------------------------------------------------------------------------

Test-Suite test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            TestSuite.hs
    build-depends:
        subhask,
        test-framework-quickcheck2,
        test-framework
  if flag(dotestoptimise)
    ghc-options: -O2
  if flag(llvmsupport)
    ghc-options: -fllvm

Test-Suite Example0001
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0001-polynomials.lhs
    build-depends:      subhask, base

Test-Suite Example0002
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0002-monad-instances-for-set.lhs
    build-depends:      subhask, base

Test-Suite Example0003
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            example0003-linear-algebra.lhs
    build-depends:      subhask, base

benchmark ghc-test-linear-algebra
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     examples
    main-is:            ghc-test-linear-algebra.lhs
    build-depends:      subhask, base, primitive

    ghc-options:
        -O2
        -funbox-strict-fields
        -fexcess-precision
        -optlo-O3
        -optlo-enable-fp-mad
        -optlo-enable-no-infs-fp-math
        -optlo-enable-no-nans-fp-math
        -optlo-enable-unsafe-fp-math
        -ddump-to-file
        -ddump-simpl-stats
        -ddump-simpl-iterations
        -ddump-rule-firings
        -ddump-rule-rewrites
        -ddump-opt-cmm
        -dverbose-core2core
        -dsuppress-idinfo
        -dsuppress-coercions
        -dsuppress-type-applications
        -dsuppress-uniques
        -dsuppress-module-prefixes
        -ddump-asm

--------------------------------------------------------------------------------

benchmark bench
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Vector.hs
    build-depends:
        base,
        subhask,
        criterion,
        MonadRandom

    ghc-options:
        -O2
        -funbox-strict-fields
        -fexcess-precision
        -optlo-O3
        -optlo-enable-fp-mad
        -optlo-enable-no-infs-fp-math
        -optlo-enable-no-nans-fp-math
        -optlo-enable-unsafe-fp-math

 if flag(llvmsupport)
    ghc-options: -fllvm

